<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:activity="online.postboard.android.ui.myprofile.UserProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/margin_full">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_headline"
                android:text="@string/app_name"
                android:textColor="@color/blue_gray_1"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/loginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_body" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/loginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_body" />
            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/loginButton"
                android:layout_width="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="35dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/round"
                android:text="LOGIN"
                android:textColor="@color/white"
                android:textSize="@dimen/text_button" />


            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="or sign in with:"
                android:gravity="center"
                android:textSize="@dimen/text_caption"
                android:textColor="@color/blue_gray_1"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <ImageView
                    android:id="@+id/loginFacebook"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="4dp"
                    android:src="@drawable/fb" />

                <ImageView
                    android:id="@+id/loginGoogle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="4dp"
                    android:src="@drawable/google" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/register_tv"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="16dp"
                    android:text="Register"
                    android:textSize="@dimen/text_body"
                    android:textColor="@color/blue_gray_1"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="16dp"
                    android:text="Forgot Password"
                    android:textSize="@dimen/text_body"
                    android:textColor="@color/blue_gray_1"

                    />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
